// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Group Queries when fetching a group by ID when there is a group with the given ID should find the group 1`] = `
Object {
  "actions": Array [],
  "data": Object {
    "description": "This group is for members of the community only.",
    "id": "1",
    "label": "community members",
    "users": Array [
      Object {
        "authProviderUserId": "auth0|123",
        "eventHistory": Array [],
        "id": "1",
        "profile": Object {
          "email": "llcj1985@aol.com",
          "name": Object {
            "firstName": "James",
            "lastName": "Jones",
          },
        },
        "roles": Array [
          "viewer",
        ],
        "type": "user",
        "username": "cool-james",
      },
    ],
  },
}
`;

exports[`User Group Queries when fetching all groups should return the expected result 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [],
      "data": Object {
        "description": "This group is for members of the community only.",
        "id": "1",
        "label": "community members",
        "users": Array [
          Object {
            "authProviderUserId": "auth0|123",
            "eventHistory": Array [],
            "id": "1",
            "profile": Object {
              "email": "llcj1985@aol.com",
              "name": Object {
                "firstName": "James",
                "lastName": "Jones",
              },
            },
            "roles": Array [
              "viewer",
            ],
            "type": "user",
            "username": "cool-james",
          },
        ],
      },
    },
  ],
}
`;
